--- a/dos33.html
+++ b/dos33.html
@@ -2776,7 +2776,7 @@ With that "legalese" out of the way ... enjoy the read!
                     223             RTS
                     224 ;
                     225 ICFDB       EQU *           ; NOT RUN MODE
-                    226             JSR CLOSE       ; GO CLOSE FIEL
+                    226             JSR CLOSE       ; GO CLOSE FILE
                     227             JSR CLRSTS      ; GO CLEAR STATES
                     228             JMP <a class='x' href='#ORTN'>ORTN</a>                                        ;
                     229             PAGE
