--- a/dos33.html
+++ b/dos33.html
@@ -4515,7 +4515,7 @@ With that "legalese" out of the way ... enjoy the read!
 305F:0D D5 35       080             ORA DCBWRF
 3062:8D D5 35       081             STA DCBWRF
                     082 <a class='f' name='DBIO1'    >DBIO1       </a>EQU *
-3065:AD F9 35       083             LDA DCBVOL      ; VOL                           ;[..<a class='mem' name='_3065'>wastes</a> 4 bytes
+3065:AD F9 35       083             LDA DCBVOL      ; VOL                           ;[..<a class='mem' name='_3065'>wastes</a> 2 bytes
 3068:49 FF          084             EOR #$FF        ; UNINVERT VOL BITS             ; ..  0. Why was it inverted in the first place???
 306A:8D EB 37       085             STA IBVOL                                       ; ..  1. More crappy names; Since DCB and IB are used all the time,
 306D:AD F7 35       086             LDA DCBSLT      ; SLOT                          ; ..     a single letter prefix with an underscore '_' would
@@ -4525,28 +4525,51 @@ With that "legalese" out of the way ... enjoy the read!
 3079:AD E2 35       090             LDA DCBSDL      ; LENGTH                        ; ..         D_SLOT         DCBSLT
 307C:8D F2 37       091             STA IBDLEN                                      ; ..         I_SLOT         IBSLOT
 307F:AD E3 37       092             LDA DCBSDL+1                                    ; ..  2. Note: Length is 16-bit
-3082:8D F3 37       093             STA IBDLEN+1                                    ; ..] 3. Over-engineered memcpy() to marshall DCB data to/from IOB data.
-                                                                                    ;        Due to the <b>contiguous</b> <i>layout</i> of
+3082:8D F3 37       093             STA IBDLEN+1                                    ; ..] 3. <b>Over-engineered memcpy()</b> to marshall DCB to/from IOB
+                                                                                    ;        Due to the <b>contiguous</b> <i>layout</i> (/saracasm Who knew!)
+                                                                                    ;
                                                                                     ;            [26] DCBSLT &lt;-&gt; [1] IBSLOT
                                                                                     ;            [27] DCBDRV &lt;-&gt; [2] IBDRVN
                                                                                     ;            [28] DCBVOL &lt;-&gt; [3] IBVOL
+                                                                                    ;
                                                                                     ;        This entire mem copy can be simplified: (16 bytes)
                                                                                     ;            <span class='code'>        LDX #0           </span>
                                                                                     ;            <span class='code'>DCB2IOB LDA DCBSLT,X     </span>
                                                                                     ;            <span class='code'>        STA IBSLOT,X     </span>
                                                                                     ;            <span class='code'>        INX              </span>
-                                                                                    ;            <span class='code'>        CPX #IBVOL-IBSLOT</span> 
+                                                                                    ;            <span class='code'>        CPX #IBVOL-IBSLOT</span> ; copy 3 fields (3 bytes)
+                                                                                    ;            <span class='code'>        BNE DCB2IOB      </span>
                                                                                     ;            <span class='code'>        EOR #$FF         </span> ; Invert Volume
                                                                                     ;            <span class='code'>        STA IBSLOT,X     </span>
                                                                                     ;
-                                                                                    ;        If we didn't have to deal with that stupid VOLUME EOR #$FF
-                                                                                    ;        It could be simplified even more
-                                                                                    ;            <span class='code'>        LDX #IBVOL-IBSLOT</span> ; copy 3 bytes
+                                                                                    ;        If we didn't have the bad design of DCBSDL
+                                                                                    ;        not being contiguous with the above 3 fields:
+                                                                                    ;
+                                                                                    ;            [11] DCBSDL != [A] IBDLEN
+                                                                                    ;
+                                                                                    ;        Which should be:
+                                                                                    ;
+                                                                                    ;            [24] DCBSDL &lt;-&gt; [0] IBDLEN
+                                                                                    ;
+                                                                                    ;        We could instead have:
+                                                                                    ;
+                                                                                    ;            <span class='code'>        LDX #0           </span>
+                                                                                    ;            <span class='code'>DCB2IOB LDA DCBSDL,X     </span>
+                                                                                    ;            <span class='code'>        STA IBDLEN,X     </span>
+                                                                                    ;            <span class='code'>        INX              </span>
+                                                                                    ;            <span class='code'>        CPX #IBVOL-IBDLEN</span> ; copy 4 fields (5 bytes)
+                                                                                    ;            <span class='code'>        EOR #$FF         </span> ; Invert Volume
+                                                                                    ;            <span class='code'>        STA IBSLOT,X     </span>
+                                                                                    ;
+                                                                                    ;        Also, if we didn't have to deal with that stupid VOLUME EOR #$FF
+                                                                                    ;        It could be simplified even more: (11 bytes vs 32bytes!)
+                                                                                    ;
+                                                                                    ;            <span class='code'>        LDX #IBVOL-IBDLEN</span> ; copy 4 fields (5 bytes)
                                                                                     ;            <span class='code'>DCB2IOB LDA DCBSLT,X     </span>
                                                                                     ;            <span class='code'>        STA IBSLOT,X     </span>
                                                                                     ;            <span class='code'>        DEX              </span>
                                                                                     ;            <span class='code'>        BPL DCB2IOB      </span>
-
+                                                                                    ;
 3085:A9 01          094             LDA #1          ; IOB TYPE                      ;[..  <a class='mem' name='_'>wastes</a> 5 bytes, <a class='magic' name='_'>magic number</a>
 3087:8D E8 37       <a class='line' name='FLOCNXB.095'>095</a>             STA <a class='v' href='#IBTYPE'>IBTYPE</a>                                      ; ..] never referenced!
                     096 
